:bug: fix the board display